Alignment fixes

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -294,7 +294,7 @@ nav
 
 .custom-btn-2
 	display: inline-block;
-	width: 200px;
+	width: 100%;
 	padding: 10px;
 	margin: 5px;
 	font-size: 14px;
@@ -354,3 +354,6 @@ nav
 
 .fab
 	color: white;
+
+.contact-form-heading
+	color: $dark-color
